<resources>
    <string name="app_name">Aplicacion-android</string>

    <!-- Pagina de Benvinguda -->
    <string name="titol">GameVerse</string>
    <string name="seguent">Següent</string>
    <string name="login">Log in</string>
    <string name="colorFons">Color Fons</string>
    <string name="fosc">Fosc</string>
    <string name="clar">Clar</string>
    <string name="grafics">Estadístiques</string>

    <!-- Pagina Principal -->
    <string name="novetats">Novetats</string>
    <string name="menu">Menu</string>
    <string name="imgNovetats">Imatge Novetats</string>

    <!-- Menu Navegació -->
    <string name="pgPrincipal">Pag. Principal</string>
    <string name="forum">Fórum</string>
    <string name="pregutes">Preguntes</string>
    <string name="info">Informació sobre videojocs</string>
    <string name="ajuda">Ajuda</string>
    <string name="enrere">Enrere</string>

    <!-- Pagina Forum -->
    <string name="filtra">filtra</string>
    <string name="imatgeUsuari">Imatge d\'usuari</string>
    <string name="usuari">Usuari</string>
    <string name="comentari">Comentari</string>
    <string name="joc">Joc</string>
    <string name="escriuComentari">Escriu aqui el teu Comentari</string>
    <string name="ningunComentari">No s\'ha torbat cap comentari</string>

    <!-- Pagina Log in -->
    <string name="register">Registrar-se</string>
    <string name="text_noHayCuenta">No tens compte? Regístrat aqui abaix:</string>
    <string name="textLogin">Log In</string>
    <string name="nombreUsuario">Nom d\'usuari</string>
    <string name="passUsuario">Contrasenya</string>
    <string name="tituloLogin">INICI DE SESSIÓ</string>

    <!-- Pagina Registrar-se -->
    <string name="titRegister">REGISTRAR-SE</string>
    <string name="nombreUsuarioReg">Crea un nom d\'usuari</string>
    <string name="passUsuarioReg">Crea una contrasenya</string>
    <string name="repetirPass">Repeteix la contrasenya</string>
    <string name="emailReg">Introdueix el teu correu</string>

    <!-- Pagina Usuari -->
    <string name="nomUser">Nom Usuari</string>
    <string name="nombre">Nom:</string>
    <string name="nomDefault">nom</string>
    <string name="edad">Edat:</string>
    <string name="edadDefault">edat</string>
    <string name="sexe">Sexe:</string>
    <string name="sexeDefault">sexe</string>
    <string name="descripcio">Descripció:</string>
    <string name="descDefault">desc</string>
    <string name="id">Id:</string>
    <string name="idDefault">0</string>
    <string name="contra">Contrasenya:</string>
    <string name="contraDefault">contra</string>
    <string name="elimina">Borra Usuari</string>
    <string name="videoFav">Els 3 videojocs preferits:</string>
    <string name="slot1">slot 1</string>
    <string name="slot2">slot 2</string>
    <string name="slot3">slot 3</string>

    <string name="editSlot">Editar slot</string>
    <string name="editText">Nom del videojoc</string>
    <string name="saveChanges">Guardar canvis</string>

    <string name="gameName">Nom del videojoc</string>

    <!-- Pagina Videojocs -->
    <string name="games">Videojocs</string>
    <string name="search">Buscar videojoc…</string>
    <string name="tots">Tots</string>
    <string name="accio">Acció</string>
    <string name="rpg">RPG</string>
    <string name="aventura">Aventura</string>

    <string name="descripcioJoc">Descripció</string>
    <string name="descripcioTxt">Text sobre la descripció del videojoc</string>
    <string name="fotos">Fotos</string>
    <string name="video">Videos</string>
    <string name="valoracio">Valoració</string>
    <string name="like">like</string>
    <string name="dislike">dislike</string>

    <!-- Pagina Preguntes -->
    <string name="preguntaTxt">Text de pregunta sobre un videojoc</string>

    <string name="respostes">Respostes</string>

    <!-- Pagina ajuda -->
    <string name="preguntesFrequents">Preguntes Freqüents</string>
    <string name="preguntaFrequent">Pregunta Freqüent</string>

    <!-- Pagina Gràfics -->
    <string name="titolGrafics">Estadístiques</string>
    <string name="titolGeneres">Percentatge per gènere</string>
    <string name="infoGeneres">Masculí / Femení</string>
    <string name="titolEdats">Porcentatge rangs d\'edat</string>
    <string name="infoEdats">0-17, 18-30, 31-50, 51+</string>
    <string name="titolImpacte">Impacte estimat</string>
    <string name="horasUso">Horas de uso: 0h</string>
    <string name="infoCO2">CO₂ equivalente: 0 kg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>