<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/alt_nav_home"
            android:checked="true"
            android:icon="@drawable/plus_circle_svgrepo_com"
            android:title="@string/pgPrincipal" />
        <item
            android:id="@+id/alt_nav_gallery"
            android:icon="@drawable/plus_circle_svgrepo_com"
            android:title="@string/forum" />
        <item
            android:id="@+id/alt_nav_slideshow"
            android:icon="@drawable/plus_circle_svgrepo_com"
            android:title="@string/pregutes" />
        <item
            android:id="@+id/alt_nav_slides"
            android:icon="@drawable/plus_circle_svgrepo_com"
            android:title="@string/info" />
    </group>
</menu>