<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp"
    android:background="@drawable/slot_background"
    android:backgroundTint="@color/white"
    android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/ivUsuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person"
            android:background="@drawable/circle"
            android:contentDescription="@string/imatgeUsuari"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/tvUsuari"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usuari"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginStart="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivUsuari"/>

        <TextView
            android:id="@+id/tvComentari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentari"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ivUsuari"/>

        <Button
            android:id="@+id/btnJoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/joc"
            android:textSize="20sp"
            android:backgroundTint="@color/primary"
            app:cornerRadius="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvComentari"
            app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>