<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_difuminado"
    tools:context=".ComentariActivity">

    <ImageView
        android:id="@+id/ivUsuari"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_person"
        android:background="@drawable/circle"
        android:contentDescription="@string/imatgeUsuari"
        app:layout_constraintTop_toTopOf="@id/tvUsuari"
        app:layout_constraintBottom_toBottomOf="@id/tvUsuari"
        app:layout_constraintEnd_toStartOf="@+id/tvUsuari"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvUsuari"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuari"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:fontFamily="@font/saira_medium"
        android:layout_marginTop="60sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/saira_medium"
        android:backgroundTint="@color/primary"
        android:text="@string/login"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/menu"
        android:src="@drawable/ic_menu"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvComentari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/comentari"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="@font/saira_medium"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvUsuari"/>

    <EditText
        android:id="@+id/edComentari"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/slot_background"
        android:hint="@string/escriuComentari"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textColorHint="#AAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ivFiltra"
        app:layout_constraintTop_toBottomOf="@id/tvComentari" />

    <ImageView
        android:id="@+id/ivFiltra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filtra"
        android:src="@drawable/ic_filtra"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/svForum"/>

    <ScrollView
        android:id="@+id/svForum"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edComentari"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_comentaris"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            tools:itemCount="10"
            tools:listitem="@layout/item_comentari" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>