<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_difuminado"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/btn_back_selector"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/enrere"
        android:src="@drawable/back_svgrepo_com"
        app:tint="@color/white"
        android:background="@android:color/transparent"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btn_back_selector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back_selector" />

    <EditText
        app:layout_constraintWidth_max="488dp"
        android:id="@+id/search_game"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/slot_background"
        android:hint="@string/search"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:textColor="@color/white"
        android:textColorHint="#AAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_selector" />

    <HorizontalScrollView
        android:id="@+id/section_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_game">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/tots"
                android:textColor="@color/white"
                app:strokeColor="@color/white" />

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/accio"
                android:textColor="@color/white"
                app:strokeColor="@color/white" />

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/rpg"
                android:textColor="@color/white"
                app:strokeColor="@color/white" />

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aventura"
                android:textColor="@color/white"
                app:strokeColor="@color/white" />
        </LinearLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_games"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/section_bar"

        tools:itemCount="10"
        tools:listitem="@layout/item_game" />

</androidx.constraintlayout.widget.ConstraintLayout>